--- a/styleforProducts.css
+++ b/styleforProducts.css
@@ -1,23 +1,43 @@
-.header{
+
+body{
 	width: 100%;
 	background-image: linear-gradient(#56a65f, rgb(255, 158, 72));
-	
+	background-image: linear-gradient(#2B7522, rgb(255, 158, 72));
 }
-
 nav{
 	display: flex;
 	justify-content: space-between;
 	align-items:center;
 }
 nav img{
-	width: 50%;
+	width: 70%;
 }
-
+.links h1{
+	display:inline;
+	text-align: left;
+	font-family: courier;
+	font-size:250%;
+	transform: translate(-50%,20%);
+	top: 50%;
+	left: 60%
+}
 .links a{
 	text-decoration: none;
+	font-size: 30px;
 	color:white;
 	font-family: arial;
 	justify-content: space-between;
-	padding: 50px;
-	flex:1;
+	padding: 24px;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #268E4B;
+  color: white;
+  text-align: center;
+}
+.footer img{
+	width:2%;
 }
