--- a/styleforContact.css
+++ b/styleforContact.css
@@ -1,3 +1,4 @@
+
 .header{
 	width: 100%;
 	background-image: linear-gradient(#56a65f, rgb(255, 158, 72));
@@ -10,23 +11,31 @@ nav{
 	align-items:center;
 }
 nav img{
-	width: 50%;
+	width: 70%;
 }
-
+.links h1{
+	display:inline;
+	text-align: left;
+	font-family: courier;
+	font-size:250%;
+	transform: translate(-50%,20%);
+	top: 50%;
+	left: 60%
+}
 .links a{
 	text-decoration: none;
+	font-size: 30px;
 	color:white;
 	font-family: arial;
 	justify-content: space-between;
-	padding: 50px;
-	flex:1;
+	padding: 20px;
 }
 * {
   box-sizing: border-box;
 }
 
 .form {
-  /* The image used */
+
   background-image: url("store.jpg");
   min-height: 800px;
   background-position: center;
@@ -34,7 +43,7 @@ nav img{
   position: relative;
 }
 
-/* Add styles to the form container */
+
 .container {
   position: absolute;
   right: 0;
@@ -68,4 +77,21 @@ input[type=text]:focus, input[type=password]:focus {
 
 .btn:hover {
   opacity: 1;
+}
+
+.about{
+	color: black;
+	width: 100%;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #268E4B;
+  color: white;
+  text-align: center;
+}
+.footer img{
+	width:2%;
 }
