--- a/styleforHome.css
+++ b/styleforHome.css
@@ -1,9 +1,5 @@
-html {
-height: 100%;
-margin: 0;
-padding: 0;
-}
-.header{
+
+.header{			
 	width: 100%;
 	background-image: linear-gradient(#56a65f, rgb(255, 158, 72));
 	
@@ -15,73 +11,81 @@ nav{
 	align-items:center;
 }
 nav img{
-	width: 50%;
+	width: 70%;
 }
-
+.links h1{
+	display:inline;
+	text-align: left;
+	font-family: courier;
+	font-size:250%;
+	transform: translate(-50%,20%);
+	top: 50%;
+	left: 60%
+}
 .links a{
 	text-decoration: none;
+	font-size: 30px;
 	color:white;
 	font-family: arial;
 	justify-content: space-between;
-	padding: 50px;
-	flex:1;
+	padding: 22px;
 }
+
 .front{
-	background-image: url(store.jpg);
+	width: 80%;
+	background-image: ;
 	color: green;
-	font-family: sans-serif;
-	position:relative;
+	position:absolute;
 	text-align: center;
-	font-size: 18px;
-	position: center;
+	transform: translate(-50%,20%);
+	top: 30%;
+	left: 50%;
+	
+
+}
+.front h1{
+		font-family: sans-serif;
+		font-size: 18px;
 }
 
 .products-btn{
-	
+	display: inline-block;
 	text-decoration:none;
 	color: black;
 	border: 3px solid green;
+	padding: 12px 22px;
 	font-size: 20px;
+	transform: translate(160%,200%);
 	background: transparent;
-	position: center;
 	cursor: pointer;
+}
+.products-btn:hover{
+	color: white;
+	background-color: green;
+	transition: 0.2s;
 }
 p {
   color: red;
   font-size: 30px;
-  text-align: right;
+  text-align: center;
   
 }
 
-.collage{
+.collage img{
+	width: 100%;
 	float: right;
 	position: absolute;
 	
 }
-.column{
-	box-sizing: border-box;
-	float: left;
-	width:30%;
-	padding: 10px;
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #268E4B;
+  color: white;
+  text-align: center;
 }
-
-.column img{
-	margin-top: 10px;
-	position: center;
+.footer img{
+	width:2%;
 }
-
-.row:after{
-	content: "";
-	display: table;
-	clear: both;
-}
-		cities {
-			background-color: black;
-			color: white;
-			
-				}
-			forfont{
-			color:green;
-			font-family:verdana;
-			font-size:150%;
-			}	
